--- a/src/BookmarkEditor/component.css
+++ b/src/BookmarkEditor/component.css
@@ -1,7 +1,4 @@
 .BookmarkEditor {
-  /* BookmarkEditor does not inherit <App> */
-  --size-gap: 5px;
-  --size-wide-gap: 15px;
   --size-form-control-padding: 8px;
   --size-form-control-border-radius: 4px;
   --size-icon: 16px;
